test/tests/NonParameterizedGeneric3.expected
NonParameterizedGeneric3.panda:1:1: error: 'panda.collections.Array' expected 1 generic parameter, but found 0
1 error
