test/tests/NonParameterizedGeneric3.panda
class NonParameterizedGeneric3 : Array {
}